<resources>
    <string name="app_name">Spadger</string>

    <string name="load_end_tip">--end--</string>
    <string name="help">提示</string>
    <string name="string_help_text">没有此权限将无法打开相册。\n点击"设置"-"权限"-打开所需权限。</string>
    <string name="quit">退出</string>
    <string name="settings">设置</string>
    <string name="load_empty_tip">抱歉,暂未获取到数据!\n请点击屏幕重试~</string>
    <string name="load_nonetwork_tip">暂未连接上网络!\n请连接后点击屏幕重试~</string>
    <string name="load_failed_tip">抱歉,系统出错了!\n请点击屏幕重试~</string>
    <string name="load_loading_tip">正在加载中...</string>
    <string name="input_error">输入错误</string>
    <string name="already_first">已经是第一页</string>
    <string name="already_last">已经是最后一页</string>
    <string name="new_video">最新电影</string>
    <string name="new_picture">最新图片</string>
    <string name="new_novel">最新小说</string>
    <string name="collection">收藏</string>
    <string name="cancel_collection">取消收藏</string>
    <string name="no_collection">没有数据</string>
    <string name="no_data">没有数据</string>
    <string name="prohibit_no_wifi">非wifi环境自动退出APP</string>
    <string name="auto_per_load">wifi环境下自动预加载</string>
    <string name="parse_error">地址解析出错</string>
    <string name="explain">本次更新内容主要有：\n1:增加伊人资源\n2:增加自动预加载图片功能（可在设置中启用）\n3:未启用预加载图片功能时，仍然可以通过长按来预加载某一图集\n4：在第二类资源的视频播放详情页面，
        点击小图片可复制视频源地址，在第一类和第三类资源中，长点击可复制视频源地址\n\n特别说明：
        \n1：建议打开非wifi环境下自动退出APP\n2：网速较差建议不启动图片预加载功能，通过长按方式来预加载图片，因为自动预加载功能会自动加载当前页的每一个图集，当网速不快时，反而效率更差，
        网速正常时推荐使用自动预加载功能\n3：第三类伊人资源的视频源地址为mp4格式，对直播播放很不友好，播放效果较差，可通过长点击复制视频源地址，在UC浏览器或者QQ浏览器中下载到本地观看</string>

    <string name="channel">A</string>
    <string name="actor">B</string>
    <string name="clazz">C</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_more">更多选项</string>
    <string name="prompt_back">返回</string>
    <string name="prompt_username">用户名</string>
    <string name="prompt_nickname">昵称</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_phone_number">手机号</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_regist">注册</string>
    <string name="action_post_token">发送验证码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">请正确填写邮箱</string>
    <string name="error_invalid_phonenumber">请正确填写手机号</string>
    <string name="error_invalid_user_name">帐号长度必须在5-12位之间</string>
    <string name="error_invalid_nick_name">昵称长度必须在3-10位之间</string>
    <string name="error_invalid_password">密码长度必须在6-12位之间</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required">请填写完整</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
